# chtkc

./: .gitattributes  CMakeLists.txt  README.md
src/: assert.h  buffer_queue.c  buffer_queue.h  dump.c  dump.h  file_reader.c  file_reader.h  file_writer.c  file_writer.h  hash_map.c  hash_map.h  header.c  header.h  histo.c  histo.h  kmer_counter.c  kmer_counter.h  kmer_processor.c  kmer_processor.h  logging.c  logging.h  main.c  mem_allocator.c  mem_allocator.h  param.c  param.h  pthread_barrier.c  pthread_barrier.h  queue.c  queue.h  types.h  utils.c  utils.h
tests/: check_all.h  check_buffer_queue.c  check_file_reader.c  check_file_writer.c  check_hash_map.c  check_kmer_processor.c  check_main.c  check_queue.c
tests/test_files/: test_fasta.fa  test_fastq_1.fq  test_fastq_2.fq  test_super_kmer  test_write_kmers  test_write_super_kmers
